--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,8 @@
-# phpstorm project files
+.git
 .idea
-
-# netbeans project files
 nbproject
-
-# zend studio for eclipse project files
 .buildpath
 .project
 .settings
-
-# windows thumbnail cache
 Thumbs.db
-
-# Mac DS_Store Files
 .DS_Store
