--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,10 @@
 {
     "name": "inpassor/yii2-daemon",
     "description": "The simple daemon extension for the Yii framework",
-    "keywords": ["yii2", "daemon"],
+    "keywords": [
+        "yii2",
+        "daemon"
+    ],
     "type": "yii2-extension",
     "license": "MIT",
     "authors": [
@@ -11,7 +14,9 @@
         }
     ],
     "require": {
-        "yiisoft/yii2": ">=2.0.6"
+        "yiisoft/yii2": "*",
+        "ext-pcntl": "*",
+        "ext-posix": "*"
     },
     "autoload": {
         "psr-4": {
